--- a/index.html
+++ b/index.html
@@ -154,9 +154,11 @@
                             Ми на карті
                         </h2>
                     </div>
-                    <map name="where-find-us" class="location__where-find-us">
+                    <!-- <map name="where-find-us" class="location__where-find-us">
                         <img src="./image/Карта (необходимо будет заменить на гугл карты) (1).png" alt="location">
-                    </map>
+                    </map> -->
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2629.5535916022136!2d30.221447887175042!3d48.771320692984645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d20d7bafde1337%3A0x4813cfdc102f38f0!2z0LLRg9C70LjRhtGPINCU0LbQtdGA0LXQu9GM0L3QsCwgMSwg0KPQvNCw0L3RjCwg0KfQtdGA0LrQsNGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCAyMDMwMA!5e0!3m2!1sru!2sua!4v1665261311976!5m2!1sru!2sua" 
+                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <div class="location__address">
                         <p>
                             20300, Умань, вул. Джерельна, 1 (біля Епіцентру)
@@ -251,7 +253,7 @@
             <a href="#" class="popup-consultation__area"></a>
             <div class="popup-consultation__body">
                 <div class="popup-consultation__content">
-                    <div class="popup__close area__popups"></div>
+                    <a href="#" class="popup__close area__popups"></a>
                         <div class="consultation__container _container consultation-background">
                             <!--<form action="#" method="post" enctype="multipart/form-data">-->
                             <div class="consultation-body-popup consultation-padding">
